--- a/css/home.css
+++ b/css/home.css
@@ -50,11 +50,7 @@
     flex-direction: column;
     justify-content: space-between;
     height: 250px;
-    width: 15%;
-    max-width: calc((1200px - 80px) / 6);
-    min-width: 140px;
-    flex-grow: 1;
-    flex-shrink: 0.1;
+    width: calc(50% - 1rem / 2);
 }
 .container-img {
     height: 69%;
@@ -94,6 +90,21 @@
         margin-bottom: 2.5rem;
     }
 }
+@media screen and (min-width: 603px) {
+    .item {
+        width: calc(33.33% - 2rem / 3);
+    }
+}
+@media screen and (min-width: 768px) {
+    .item {
+        width: calc(25% - 3rem / 4);
+    }
+}
+@media screen and (min-width: 948px) {
+    .item {
+        width: calc(20% - 4rem / 5);
+    }
+}
 
 @media screen and (min-width: 1006px) {
     header {
@@ -102,5 +113,10 @@
         height: 485px;
         justify-content: space-between;
         background-color: var(--gray-color);
+    }
+}
+@media screen and (min-width: 1100px) {
+    .item {
+        width: calc((100% / 6) - 5rem / 6);
     }
 }
