--- a/css/produtos.css
+++ b/css/produtos.css
@@ -45,12 +45,7 @@ main .container {
     flex-direction: column;
     justify-content: space-between;
     height: 250px;
-    width: 15%;
-    max-width: calc((1200px - 80px) / 6);
-    min-width: 140px;
-    flex-grow: 1;
-    flex-shrink: 0.1;
-    position: relative;
+    width: calc(50% - 1rem / 2);
 }
 .container-img {
     height: 69%;
@@ -111,6 +106,21 @@ main .container {
 
     /* end main */
 }
+@media screen and (min-width: 603px) {
+    .item {
+        width: calc(33.33% - 2rem / 3);
+    }
+}
+@media screen and (min-width: 768px) {
+    .item {
+        width: calc(25% - 3rem / 4);
+    }
+}
+@media screen and (min-width: 948px) {
+    .item {
+        width: calc(20% - 4rem / 5);
+    }
+}
 
 @media screen and (min-width: 1006px) {
     header {
@@ -118,5 +128,10 @@ main .container {
         flex-direction: column;
         justify-content: space-between;
         background-color: var(--gray-color);
+    }
+}
+@media screen and (min-width: 1100px) {
+    .item {
+        width: calc((100% / 6) - 5rem / 6);
     }
 }
