--- a/css/produtos.css
+++ b/css/produtos.css
@@ -136,3 +136,8 @@ main .container {
         width: calc((100% / 6) - 5rem / 6);
     }
 }
+@media screen and (min-width: 1400px) {
+    .item {
+        height: 300px;
+    }
+}
