--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,7 @@
 .hero {
     height: 192px;
     color: var(--white-color);
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/background.png") center/cover fixed no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/background.png") center/cover no-repeat;
     display: flex;
     align-items: flex-end;
     padding-bottom: 1rem;
